# studentRoomsDB

./: .env.example  .gitignore  README.md  pyproject.toml
migrations/: add_indexes.sql  schema.sql
src/: cli.py  config.py  db_manager.py  exporter.py  loader.py  main.py  models.py  queries.py
src/studentRoomsDB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
studentRoomsDB.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
