[project]
name = "studentRoomsDB"
version = "0.1.0"
description = "Student room database management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg[binary]>=3.0",
]

[project.scripts]
room-student = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]